tester/src/test/aya/failure/missing-case.aya.txt
In file $FILE:5:4 ->

  3 | 
  4 | \def add {a, b : Nat} : Nat
  5 |  | {zero}, {suc b} => b
          ^--^
  
Warning: The newly bound name `zero` shadows a previous definition from outer scope
In file $FILE:5:16 ->

  3 | 
  4 | \def add {a, b : Nat} : Nat
  5 |  | {zero}, {suc b} => b
                      ^^
  
Warning: The newly bound name `b` shadows a previous definition from outer scope
In file $FILE:6:8 ->

  4 | \def add {a, b : Nat} : Nat
  5 |  | {zero}, {suc b} => b
  6 |  | {suc a}, {zero} => a
              ^^
  
Warning: The newly bound name `a` shadows a previous definition from outer scope
In file $FILE:6:13 ->

  4 | \def add {a, b : Nat} : Nat
  5 |  | {zero}, {suc b} => b
  6 |  | {suc a}, {zero} => a
                   ^--^
  
Warning: The newly bound name `zero` shadows a previous definition from outer scope
In file $FILE:7:8 ->

  5 |  | {zero}, {suc b} => b
  6 |  | {suc a}, {zero} => a
  7 |  | {suc a}, {b} => suc (add {a} {b})
              ^^
  
Warning: The newly bound name `a` shadows a previous definition from outer scope
In file $FILE:7:13 ->

  5 |  | {zero}, {suc b} => b
  6 |  | {suc a}, {zero} => a
  7 |  | {suc a}, {b} => suc (add {a} {b})
                   ^^
  
Warning: The newly bound name `b` shadows a previous definition from outer scope
In file $FILE:8:4 ->

  6 |  | {suc a}, {zero} => a
  7 |  | {suc a}, {b} => suc (add {a} {b})
  8 |  | {a}, {suc b} => suc (add {a} {b})
          ^^
  
Warning: The newly bound name `a` shadows a previous definition from outer scope
In file $FILE:8:13 ->

  6 |  | {suc a}, {zero} => a
  7 |  | {suc a}, {b} => suc (add {a} {b})
  8 |  | {a}, {suc b} => suc (add {a} {b})
                   ^^
  
Warning: The newly bound name `b` shadows a previous definition from outer scope
In file $FILE:4:5 ->

  2 |  | zero | suc Nat
  3 | 
  4 | \def add {a, b : Nat} : Nat
           ^-^
  
Error: Unhandled case: {zero}, {zero}
Tycking interrupted due to errors.
What are you doing?
